# eks-mcp-server

./: README.md  pyproject.toml  requirements.txt
src/eks_mcp_server/: main.py
