[project]
name = "eks-mcp-server"
version = "0.1.0"
description = "A simplified MCP server for Amazon EKS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "kubernetes>=28.1.0",
]

[project.scripts]
eks-mcp-server = "eks_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
